--- a/src/app/components/login/login-form/login-form.component.html
+++ b/src/app/components/login/login-form/login-form.component.html
@@ -15,6 +15,8 @@
         class="w-full px-4 py-2 mt-1 border rounded-md focus:border-purple-500 focus:ring focus:ring-purple-200"
         placeholder="Enter your email"
         required
+        [(ngModel)]="email"
+        name="email"
       />
     </div>
     <div>
@@ -27,6 +29,8 @@
         class="w-full px-4 py-2 mt-1 border rounded-md focus:border-purple-500 focus:ring focus:ring-purple-200"
         placeholder="Enter your password"
         required
+        [(ngModel)]="password"
+        name="password"
       />
       <div class="flex justify-end mt-1">
         <a href="#" class="text-xs hover:underline"
@@ -46,7 +50,7 @@
         >
       </div>
       <a href="#" class="text-sm hover:underline">Sign Up</a>
-    </div><button nz-button nzType="primary" [routerLink]="['/login']" class="mr-4" nzBlock="true">Login</button>
+    </div><button nz-button nzType="primary"  class="mr-4" (click)="login()" nzBlock="true">Login</button>
   </form>
   <div class="flex items-center justify-between mt-4">
     <hr class="w-full" />
