--- a/src/app/components/pet-management/pet-management.component.html
+++ b/src/app/components/pet-management/pet-management.component.html
@@ -4,19 +4,19 @@
   <app-header></app-header>
 
   <!-- Main Content -->
-  <nz-content class="p-8">
-    <div class="p-4 bg-white rounded-lg shadow-md">
+  <nz-content class="flex justify-center p-8">
+    <div class="p-4 bg-white rounded-lg shadow-md w-[80%] pt-[2.18rem] px-[2.1rem] pb-0">
 
       <!-- Search Input and Add Pet Button -->
-      <div class="flex items-center justify-between mb-6">
-        <nz-input-group nzSearch nzSize="large" [nzAddOnAfter]="suffixButton">
+      <div class="flex items-center justify-between mb-6 w-[31rem]">
+        <nz-input-group nzSearch nzSize="default" [nzAddOnAfter]="suffixButton">
           <input type="text" nz-input placeholder="Search pets..." />
         </nz-input-group>
         <ng-template #suffixButton>
-          <button nz-button nzType="primary" nzSize="large" nzSearch>Search</button>
+          <button nz-button nzType="primary" nzSize="small" nzSearch>Search</button>
         </ng-template>
 
-        <button nz-button nzType="default" (click)="openEditModal()">Add Pet</button>
+        <button nz-button nzType="default" nzSize="default" (click)="openEditModal()">Add Pet</button>
       </div>
 
       <!-- Table -->
@@ -28,22 +28,23 @@
         [nzTotal]="total"
         [nzPageIndex]="pageIndex"
         (nzQueryParams)="onQueryParamsChange($event)"
+        [nzSize]="'small'"
       >
         <thead>
           <tr>
-            <th nzColumnKey="petId" [nzSortFn]="true">Pet ID</th>
+            <th nzColumnKey="petId" nzWidth="5rem" [nzSortFn]="true">Pet ID</th>
             <th nzColumnKey="name" [nzSortFn]="true">Name</th>
             <th nzColumnKey="owner" [nzSortFn]="true">Owner</th>
             <th nzColumnKey="species" [nzSortFn]="true">Species</th>
             <th nzColumnKey="breed" [nzSortFn]="true">Breed</th>
-            <th nzColumnKey="action">Actions</th>
+            <th nzColumnKey="action" nzWidth="7rem">Actions</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let pet of petList; let i = index;">
             <td>{{ i }}</td>
-            <td>{{ pet.firstName + " " + pet.lastName }}</td>
-            <td><button nz-button nzType="link">{{ pet }}</button></td>
+            <td>{{ pet.nickname }}</td>
+            <td><button nz-button nzType="link">{{ pet.ownerName }}</button></td>
             <td>{{ pet.speciesName }}</td>
             <td>{{ pet.breedName }}</td>
             <td>
@@ -59,13 +60,14 @@
       </nz-table>
 
       <!-- Pagination -->
-      <nz-pagination
+      <!-- <nz-pagination
         [nzTotal]="total"
         [(nzPageIndex)]="pageIndex"
         [(nzPageSize)]="pageSize"
         (nzPageIndexChange)="onPageIndexChange($event)"
         (nzPageSizeChange)="onPageSizeChange($event)"
-      ></nz-pagination>
+        class="flex justify-end"
+      ></nz-pagination> -->
     </div>
   </nz-content>
 
