--- a/src/app/components/pet-management/pet-management.component.html
+++ b/src/app/components/pet-management/pet-management.component.html
@@ -51,7 +51,7 @@
               <button nz-button nzType="link" nz-tooltip nzTooltipTitle="Edit" (click)="editPet(pet)">
                 <i nz-icon nzType="edit"></i>
               </button>
-              <button nz-button nzType="link" nz-tooltip nzTooltipTitle="Delete" (click)="deletePet(pet)">
+              <button nz-button nzType="link" nz-tooltip nzTooltipTitle="Delete" (click)="showDeleteConfirm(pet.uuid)">
                 <i nz-icon nzType="delete"></i>
               </button>
             </td>
