--- a/src/app/components/pet-management/pet-management.component.html
+++ b/src/app/components/pet-management/pet-management.component.html
@@ -19,6 +19,8 @@
 
       <!-- Table -->
       <nz-table
+        #editRowTable
+        [nzBordered]="true"
         [nzData]="petList"
         [nzLoading]="loading"
         [nzPageSize]="pageSize"
@@ -41,19 +43,80 @@
         <tbody>
           <tr *ngFor="let pet of petList; let i = index">
             <td>{{ i }}</td>
-            <td>{{ pet.nickname }}</td>
+            <ng-container *ngIf="!editCache[pet.uuid].edit; else editing">
+              <td>{{ pet.nickname }}</td>
+              <td>
+                <button nz-button nzType="link">{{ pet.ownerName }}</button>
+              </td>
+              <td>{{ pet.speciesName }}</td>
+              <td>{{ pet.breedName }}</td>
+            </ng-container>
+            <!-- Editing mode -->
+            <ng-template #editing>
+              <td><input type="text" nz-input [(ngModel)]="editCache[pet.uuid].data.nickname" /></td>
+              <td><input type="text" nz-input [(ngModel)]="editCache[pet.uuid].data.ownerName" /></td>
+              <td>
+                <nz-select
+                  class="w-full"
+                  nzShowSearch
+                  nzAllowClear
+                  [nzPlaceHolder]="pet.speciesName || 'Select a species'"
+                  [(ngModel)]="editCache[pet.uuid].data.speciesUuid"
+                  (ngModelChange)="onSpeciesChange(pet.uuid, $event)"
+                >
+                  <nz-option
+                    *ngFor="let species of speciesList"
+                    [nzLabel]="species.name"
+                    [nzValue]="species.uuid"
+                  ></nz-option>
+                </nz-select>
+              </td>
+              <td>
+                <nz-select
+                  class="w-full"
+                  nzShowSearch
+                  nzAllowClear
+                  nzPlaceHolder="Select a breed"
+                  [(ngModel)]="editCache[pet.uuid].data.breedUuid"
+                  [nzDisabled]="!editCache[pet.uuid].data.speciesUuid"
+                  (ngModelChange)="onBreedChange(pet.uuid, $event)"
+                >
+                  <nz-option
+                    *ngFor="let breed of breedLists[pet.uuid] || []"
+                    [nzLabel]="breed.name"
+                    [nzValue]="breed.uuid"
+                  ></nz-option>
+
+                </nz-select>
+              </td>
+            </ng-template>
             <td>
-              <button nz-button nzType="link">{{ pet.ownerName }}</button>
-            </td>
-            <td>{{ pet.speciesName }}</td>
-            <td>{{ pet.breedName }}</td>
-            <td>
-              <button nz-button nzType="link" nz-tooltip nzTooltipTitle="Edit" (click)="editPet(pet)">
-                <i nz-icon nzType="edit"></i>
-              </button>
-              <button nz-button nzType="link" nz-tooltip nzTooltipTitle="Delete" (click)="showDeleteConfirm(pet.uuid)">
-                <i nz-icon nzType="delete"></i>
-              </button>
+              <ng-container *ngIf="!editCache[pet.uuid].edit">
+                <button nz-button nzType="link" nz-tooltip nzTooltipTitle="Edit" (click)="startEdit(pet.uuid)">
+                  <i nz-icon nzType="edit"></i>
+                </button>
+                <button
+                  nz-button
+                  nzType="link"
+                  nz-tooltip
+                  nzTooltipTitle="Delete"
+                  (click)="showDeleteConfirm(pet.uuid)"
+                >
+                  <i nz-icon nzType="delete"></i>
+                </button>
+              </ng-container>
+              <ng-container *ngIf="editCache[pet.uuid].edit">
+                <button nz-button nzType="link" (click)="saveEdit(pet.uuid)" class="save">Save</button>
+                <button
+                  nz-button
+                  nzType="link"
+                  nz-popconfirm
+                  nzPopconfirmTitle="Sure to cancel?"
+                  (click)="cancelEdit(pet.uuid)"
+                >
+                  Cancel
+                </button>
+              </ng-container>
             </td>
           </tr>
         </tbody>
